--- a/style.css
+++ b/style.css
@@ -75,3 +75,18 @@
     font-size: larger;
     font-weight: ;
 }
+
+.select select,
+.program-select select,
+#credit-price {
+    width: 100%; /* Set the width to 100% */
+    height: 40px; /* Set the height to your desired value */
+}
+
+#credit-price-container,
+.program-select,
+#subject-select-container,
+#calculate-price-container,
+#total-price-container {
+    margin-top: 20px;
+}
