--- a/style.css
+++ b/style.css
@@ -88,6 +88,9 @@
         margin: 10px 0; /* Margin for spacing between elements */
     }
 
+    /*nav styles*/
+    
+
     @media screen and (max-width: 600px) {
         .top {
             display: flex;
@@ -105,7 +108,7 @@
         }
     
         .banner_text {
-            font-size: 24px; /* Adjust font size for mobile */
+            font-size: 38px; /* Adjust font size for mobile */
             text-align: center;
             margin-top: 10px;
             padding: 10px;
@@ -114,4 +117,129 @@
         .middle {
             margin-top: 10px; /* Adjust the margin for spacing */
         }
+       
     }
+
+    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap");
+    
+    .header {
+        top: 0;
+        left: 0;
+        width: auto;
+        padding: 1.3rem 10%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 100;
+    }
+
+    .header::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #f0f0f0;
+        z-index: -1;
+    }
+
+    .header::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(90dge, transparent, rgba(255,255,255,.4), transparent );
+        transition: .5s;
+    }
+
+    .header:hover::after {
+        left: 100%;
+    }
+
+    .Logo {
+        font-size: 2rem;
+        color: #ff0000;
+        text-decoration: none;
+        font-weight: 700;
+    }
+
+    .navbar a {
+        font-size: 1.15rem;
+        color: #000000;
+        text-decoration: none;
+        font-weight: 500;
+        margin-left: 2.5rem;
+    }
+
+    #check {
+        display: none;
+    }
+
+    .icons{
+        position: absolute;
+        right: 5%;
+        font-size: 2.8rem;
+        color:#ff0000;
+        cursor: pointer;
+        display: none;
+    }
+
+@media (max-width: 992px){
+    .header{
+        padding: 1.6rem 5%;
+
+    }
+}
+
+@media (max-width: 768px){
+    .icons{
+        display: inline-flex;
+    }
+
+    #check:checked~.icons #menu-icon  {
+        display: none;
+    } 
+
+    .icons #close-icon {
+        display: none;
+    }
+
+    #check:checked~.icons #close-icon  {
+        display: block;
+    }
+
+    .navbar{
+        position: absolute;
+        top: 50%;
+        left: 0;
+        height: 0;
+        width: 100%;
+        background-color: rgba(225, 225, 225, .1);
+        backdrop-filter: blur(15px);
+        overflow: hidden;
+        transition: 0.3s ease;
+    }
+    
+    #check:checked~.navbar{
+        height: 17.7rem;
+    }
+
+    .navbar a {
+        display: block;
+        font-size: 1.1rem;
+        margin: 1.5rem 0 ;
+        text-align: center;
+        transform: translateY(-50px);
+        opacity: 0;
+        transition: .3s ease;
+    }
+
+    #check:checked~.navbar a {
+        transform: translateY(0);
+        transition-delay: calc(.15s * var(--i));
+        opacity: 1;
+    }
+}
