--- a/style.css
+++ b/style.css
@@ -104,8 +104,7 @@
 .header {
     top: 0;
     left: 0;
-    width: auto;
-    padding: 1.3rem 10%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
