--- a/style.css
+++ b/style.css
@@ -118,6 +118,8 @@
     width: 100%; /* Set the width to 100% */
     box-sizing: border-box; /* Include padding and border in the element's total width */
     text-align: center; /* Align the content to the right */
+    font-weight: 2px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 /* Styling for navbar links */
