--- a/style.css
+++ b/style.css
@@ -210,3 +210,48 @@
     color: #666;
     font-size: 1.1em;
 }
+ /* recent posts */
+
+ /* Your existing styles go here */
+
+.vertical-articles {
+    width:500px; /* Adjust the width as needed */
+    margin: 20px;
+}
+
+.vertical-articles h2 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.article {
+    display:flex; /* Use flexbox for layout */
+    border: 1px solid #c4c4c4; /* Border for the box */
+    border-radius: 8px; /* Rounded corners */
+    padding: 1px; /* Padding inside the box */
+    margin-bottom: 10px;
+    
+}
+
+
+.article img {
+    width: 150px; /* Adjust the width as needed */
+    height: auto;
+    border-radius: 8px;
+    margin-right: 10px; /* Add some spacing between image and content */
+    transition: transform 0.3s;
+}
+
+.article-content {
+    flex-grow: 1; /* Allow content to grow and take available space */
+}
+
+.article h3 {
+    font-size: 16px;
+    margin-bottom: 5px;
+}
+
+.article p {
+    font-size: 14px;
+    color: #666;
+}
