--- a/style.css
+++ b/style.css
@@ -411,3 +411,13 @@
     color: #000;
     font-size: 17px;
 }
+
+.foeng_qu{
+    color: rgb(76, 76, 228);
+    font-size: 18px;
+}
+
+.foeng_answer{
+    color: #000;
+    font-size: 17px;
+}
