--- a/NativeStyle.css
+++ b/NativeStyle.css
@@ -12,15 +12,16 @@
 
 /* Styling for the banner text */
 .banner_text {
-    padding: 15px; /* Padding for the banner text */
-    width: auto; /* Auto width for responsiveness */
-    height: 95px; /* Set the height of the banner text */
-    float: right; /* Float the banner text to the right */
-    font-size: 65px; /* Font size of the banner text */
-    font-weight: bolder; /* Bold font weight for the banner text */
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; /* Font family for the banner text */
-    text-align: center; /* Center align the banner text */
-    background-color: rgb(255, 255, 255); /* Background color for the banner text */
+    padding: 15px;
+    width: auto;
+    height: 95px;
+    float: right;
+    font-size: 65px;
+    font-weight: bolder;
+    padding: 10px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+    background-color: rgb(255, 255, 255);
 }
 
 /* Styling for the middle section */
